# PeripheralOS

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  device_support.yml  documentation.yml  feature_request.yml
.github/workflows/: release.yml
docs/: architecture.md  coding-standards.md  design-principles.md  development-workflow.md  device-support.md  hidpp-notes.md  project-structure.md  release-template.md  roadmap.md
include/peripheralos/devices/: BatteryInfo.hpp  DeviceIdentity.hpp
include/peripheralos/hidpp/: UnifiedBatteryParser.hpp  UnifiedBatteryReader.hpp
include/peripheralos/logitech/: Hidpp20Client.hpp  Hidpp20FeatureIds.hpp  HidppBattery.hpp
include/peripheralos/platform/linux/: LinuxHidDevice.hpp  LinuxHidDiscovery.hpp
src/: main.cpp
src/devices/: DeviceIdentity.cpp
src/hidpp/: UnifiedBatteryParser.cpp  UnifiedBatteryReader.cpp
src/logitech/: Hidpp20Client.cpp  HidppBattery.cpp
src/platform/linux/: LinuxHidDevice.cpp  LinuxHidDiscovery.cpp
tests/: UnifiedBatteryReader.test.cpp
